--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
  - "3.6"
 
+install:
+ - pip install python-dateutil
+
 # command to run tests
 script:
  - python3 TestApp_Sprint1.py
