--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Python\\python.exe",
+    "python.pythonPath": "C:\\Users\\shahr\\AppData\\Local\\Programs\\Python\\Python36\\python.exe",
     "python.unitTest.unittestArgs": [
         "-v",
         "-s",
